# SoroMint

./: .dockerignore  .env.example  .gitignore  Dockerfile  SECURITY.md  docker-compose.yml  errors.txt  walkthrough.md
.github/: dependabot.yml
.github/workflows/: backend-lint.yml  backend-tests.yml
client/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
client/src/: App.jsx  App.test.jsx  main.jsx
contracts/access/: Cargo.toml
contracts/compliance/: Cargo.toml
contracts/compliance/src/: compliance.rs  test_compliance.rs
contracts/compliance/test_snapshots/test_compliance/: test_blacklist_denial_panics.1.json  test_event_emitted.1.json  test_successful_blacklist_and_unblacklist.1.json
contracts/factory/: Cargo.toml
contracts/lifecycle/: Cargo.toml
contracts/ownership/: Cargo.toml
contracts/token/: Cargo.toml
docs/: access-control.md  api-documentation.md  api-validation.md  backend-auth.md  backend-testing.md  compliance.md  contract-api.md  contract-events.md  cross-contract-testing.md  env-variables.md  external-metadata.md  gas-profiling-results.md  lifecycle.md  ownership-model.md  pagination-guide.md  rpc-failover.md  search-filter.md  token-design.md
server/: .eslintrc.json  dev.sqlite3  index.js  jest.config.js  knexfile.js  package.json
server/config/: env-config.js  sentry.js  swagger.js
server/coverage/: clover.xml  coverage-final.json  lcov.info
server/docs/: backend-testing.md
server/middleware/: auth.js  error-handler.js  security-headers.js
(+127 files in other folders)
